--- a/index.html
+++ b/index.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <script src="/app.js"></script>
+    <script src="/app.js" type="module"></script>
     <title>Document</title>
 </head>
+
 <body>
-    <h1> Calculadora</h1>
+    <h1> Calculadora </h1>
     <form>
         <div>
-            <label> Numero 1</label> <input type="number">
+            <label> Número 1 </label> <input type="number" id="num1">
         </div>
         <div>
-            <label> Numero 2</label> <input type="number">
+            <label> Número 2 </label> <input type="number" id="num2">
         </div>
         <div>
-            <label> Resultado </label> <input type="number">
+            <label> Resultado </label> <input type="number" id="resultado">
         </div>
         <div>
-            <select>
+            <select id="selectOper">
                 <option> Suma </option>
                 <option> Resta </option>
-                <option> Multiplicacion </option>
-                <option> Division </option>
+                <option> Multiplicación </option>
+                <option> División </option>
             </select>
         </div>
         <div>
-            <button type="button"> Calcular </button>
+            <button type="button" id="btnCalcular"> Calcular </button>
         </div>
     </form>
-
-    
 </body>
+
 </html>
